Fix spacing in TOC

--- a/css/print.css
+++ b/css/print.css
@@ -157,6 +157,9 @@
 .toc li {
 	margin: 0 0 0.5em 0;
 }
+.toc li li {
+	margin: 0;
+}
 .toc ol li::marker {
 	content: counter(list-item);
 }
